<resources>

    <string name="app_name" translatable="false">ExVienNv</string>

    <string name="title_personel_info">Thông tin cá nhân</string>
    <string name="title_certificate_info">Bằng cấp</string>
    <string name="title_interest">Sở thích</string>
    <string name="title_more_info">Thông tin bổ sung</string>
    <string name="title_relative_layout">FACEBOOK</string>
    <string name="title_home_layout">Mobile UI Design Xml</string>
    <string name="label_fullname">Họ tên</string>
    <string name="label_card">CMND</string>
    <string name="hint_email">Email or Phone</string>
    <string name="hint_password">Password</string>
    <string name="hint_fullname">Tên phải >=3 ký tự</string>
    <string name="hint_card">Nhập đúng 9 chữ số</string>
    <string name="hint_more_info">Nhập thông tin bổ sung - có thể để trống</string>
    <string name="txt_intermediate">Trung cấp</string>
    <string name="txt_college">Cao đẳng</string>
    <string name="txt_university">Đại học</string>
    <string name="interest_item1">Đọc báo</string>
    <string name="interest_item2">Đọc sách</string>
    <string name="interest_item3">Đọc coding</string>
    <string name="navi_btn_relative">RELATIVE LAYOUT</string>
    <string name="navi_btn_linear">LINEAR LAYOUT</string>
    <string name="navi_btn_constrain">CONSTRAINT LAYOUT</string>
    <string name="name_button_send">Gửi thông tin</string>
    <string name="name_button_login">LOGIN</string>
    <string name="number_1">Số hạng 1</string>
    <string name="number_2">Số hạng 2</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="txt_plus">+</string>
    <string name="txt_sub">-</string>
    <string name="txt_mul">*</string>
    <string name="txt_div">/</string>
    <string name="txt_result">Ket qua : </string>
    <string name="txt_hint_result">0</string>

</resources>
