<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ConstrainLayout">

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/title_personel_info"
        android:textColor="@color/yelow"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label">

        <TextView
            android:id="@+id/tv_label_username"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48sp"
            android:text="@string/label_fullname"
            android:textColor="@color/grey"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:hint="@string/hint_fullname"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintStart_toEndOf="@+id/tv_label_username"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_cmnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_username">

        <TextView
            android:id="@+id/tv_cmnd"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48sp"
            android:text="@string/label_card"
            android:textColor="@color/grey"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_card"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:hint="@string/hint_card"
            android:inputType="text"
            android:minHeight="48sp"
            android:paddingVertical="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            app:layout_constraintStart_toEndOf="@+id/tv_cmnd"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_certificate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/title_certificate_info"
        android:textColor="@color/yelow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_cmnd" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_certificate">

        <RadioButton
            android:id="@+id/radio_intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dart_pink"
            android:checked="true"
            android:minHeight="48dp"
            android:onClick="onRadioButtonClick"
            android:text="@string/txt_intermediate"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/grey"
            android:minHeight="48dp"
            android:onClick="onRadioButtonClick"
            android:text="@string/txt_college"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radio_university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/grey"
            android:minHeight="48dp"
            android:onClick="onRadioButtonClick"
            android:text="@string/txt_university"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/title_interest"
        android:textColor="@color/yelow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_interest">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/interest_item1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/interest_item2"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/interest_item3"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/checkBox3"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_moreInfor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/title_more_info"
        android:textColor="@color/yelow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_interest" />

    <EditText
        android:id="@+id/edt_more_info"
        android:layout_width="400sp"
        android:layout_height="150sp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:hint="@string/hint_more_info"
        android:inputType="textMultiLine|textImeMultiLine"
        android:maxLines="5"
        android:minLines="1"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_moreInfor" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:paddingVertical="14dp"

        android:text="@string/name_button_send"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_more_info" />
</androidx.constraintlayout.widget.ConstraintLayout>