<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <Button
        android:id="@+id/btnPlus"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:backgroundTint="@color/grey"
        android:minWidth="80sp"
        android:text="@string/txt_plus"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSub"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:backgroundTint="@color/grey"
        android:minWidth="80sp"
        android:text="@string/txt_sub"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnMul"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10sp"
        android:backgroundTint="@color/grey"
        android:minWidth="80sp"
        android:text="@string/txt_mul"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnDiv"
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grey"
        android:minWidth="80sp"
        android:text="@string/txt_div"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
