<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tvLabelNumberOne"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10sp"
            android:gravity="center"
            android:minHeight="48sp"
            android:text="@string/number_1"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtNumberOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:hint="@string/enter_number_1"
            android:inputType="number"
            android:minWidth="300sp"
            android:minHeight="48sp"
            android:textColor="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp">

        <TextView
            android:id="@+id/tvLabelNumberTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:gravity="center"
            android:minHeight="48sp"
            android:text="@string/number_2"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtNumberTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100sp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:hint="@string/enter_number_2"
            android:inputType="number"
            android:minWidth="300sp"
            android:minHeight="48dp"
            android:paddingVertical="10dp"
            android:textColor="@color/black" />

    </FrameLayout>

    <include layout="@layout/button_linear_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center_vertical"
        android:minHeight="48sp"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20sp"
            android:text="@string/txt_result"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100sp"
            android:hint="@string/txt_hint_result"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </FrameLayout>
</LinearLayout>
